passed by the engine. This greatly improves the accuracy of StdTimeSync,
particularly in network based implementations.

Fixed ENDPOINT_IN in the te923 driver.  This should provide better
compatibility with a wider range of pyusb versions.

Now catches MySQL exceptions during commits and rollbacks (as well
as queries) and converts them to weedb exceptions.


2.6.4 06/16/14

The WMR100 driver now calculates SLP in software. This fixes a problem
with the WMRS200 station, which does not allow the user to set altitude.

The WMR100 driver was incorrectly tagging rain over the last 24 hours as
rain since midnight. This caused a problem with WU and CWOP posts.

Fix cosmetic problem in wee_config_fousb pressure calibration.

Detect both NP (not present) and OFL (outside factory limits) on ws28xx.

Added driver for PeetBros Ultimeter stations.

Added driver for ADS WS1 stations.

Added driver for RainWise Mark III stations and CC3000 data logger.

Added automatic power cycling to the FineOffsetUSB driver.  Power cycle the
station when a USB lockup is detected.  Only works with USB hubs that provide
per-port power switching.

Fix imagegenerator aggregation to permit data tables with no 'interval' column.

Prompt for metric/US units for debian installations.

For WS28xx stations, return 0 for battery ok and 1 for battery failure.

If a connection to the console has been successfully opened, but then on
subsequent connection attempts suffers an I/O error, weewx will now attempt
a retry (before it would just exit).


2.6.3 04/10/14

Hardened the WMR100 driver against malformed packets.

The plot images can now use UTF-8 characters.

Fixed a problem where the Ambient threads could crash if there were
no rain database entries.

Battery status values txBatteryStatus and consBatteryVoltage now appear in
the archive record. The last LOOP value seen is used.  

CWOP posts are now slightly more robust.

Fixed pressure calculation in wee_config_fousb.
